# uuid4-base45

./: Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  pages.yml  release.yml
examples/wasm/: README.md  build_and_serve.ps1  build_and_serve.sh  index.html  qr_capacity.js
src/: lib.rs
