[package]
name = "qr-url-uuid4"
version = "0.2.0"
edition = "2021"
authors = ["Rovo Dev <dev@example.com>"]
description = "Encode UUID v4 into compact QR-friendly URLs using Base44 (removes 6 fixed bits, alphanumeric mode optimized, no space character)"
license = "Apache-2.0"
repository = "https://github.com/kookyleo/qr-url-uuid4"

[lib]
name = "qr_url_uuid4"
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies]
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
thiserror = "1"
hex = "0.4"
qr-base44 = "0.1"

# WASM
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }
js-sys = "0.3"

[[bin]]
name = "qr-url-uuid4"
path = "src/bin/qr-url-uuid4.rs"

